--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li><a href="rectangle.html">rectangle</a></li>
         <li><a href="circle-arc.html">circles and arcs</a></li>
         <li><a href="star.html">Star</a></li>
+        <li><a href="drawing-images.html">drawing-images</a></li>
+        <li><a href="sav-restore.html">Save and restore</a></li>
     </ul>
     <canvas id="canvas" width="1000" height="1000">
         <script>
