--- a/index.html
+++ b/index.html
@@ -5,21 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Canvas</title>
+    <style>
+        body {
+            background: #dddddd;
+        }
+
+        #canvas {
+            margin: 20px;
+            padding: 20px;
+            background: #ffffff;
+            border: thin inset #aaaaaa;
+            width: 600px;
+            height: 300px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Desenhando um retângulo no canvas</h1>
-    <ul>
-        <li><a href="rectangle.html">rectangle</a></li>
-        <li><a href="circle-arc.html">circles and arcs</a></li>
-        <li><a href="star.html">Star</a></li>
-        <li><a href="drawing-images.html">drawing-images</a></li>
-        <li><a href="sav-restore.html">Save and restore</a></li>
-    </ul>
-    <canvas id="canvas" width="1000" height="1000">
-        <script>
+    <h1>Desenhando um text no canvas</h1>
 
-        </script>
+    <ul>
+        <li><a href="drawing/rectangle.html">rectangle</a></li>
+        <li><a href="drawing/circle-arc.html">circles and arcs</a></li>
+        <li><a href="drawing/star.html">Star</a></li>
+        <li><a href="drawing/drawing-images.html">drawing-images</a></li>
+        <li><a href="drawing/sav-restore.html">Save and restore</a></li>
+        <li><a href="drawing/animation.html">Animation</a></li>
+        <li><a href="drawing/animation-with-time-control.html">Animation with time control</a></li>
+    </ul>
+    <h3>Canvas element size: 600 x 300,
+        Canvas drawing surface size: 300 x 150</h3>
+    <canvas id="canvas" width="600" height="300">
+        Canvas not supported :(|)
+        <script src="js/example.js"></script>
     </canvas>
 </body>
 
