--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="drawing/sav-restore.html">Save and restore</a></li>
         <li><a href="drawing/animation.html">Animation</a></li>
         <li><a href="drawing/animation-with-time-control.html">Animation with time control</a></li>
+        <li><a href="objects/cars.html">Cars</a></li>
     </ul>
     <h3>Canvas element size: 600 x 300,
         Canvas drawing surface size: 300 x 150</h3>
