Creating first animation

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="drawing/animation.html">Animation</a></li>
         <li><a href="drawing/animation-with-time-control.html">Animation with time control</a></li>
         <li><a href="objects/cars.html">Cars</a></li>
+        <li><a href="animacao/animacao-teste.html">animação</a></li>
     </ul>
     <h3>Canvas element size: 600 x 300,
         Canvas drawing surface size: 300 x 150</h3>
