--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <li><a href="drawing/animation-with-time-control.html">Animation with time control</a></li>
         <li><a href="objects/cars.html">Cars</a></li>
         <li><a href="animacao/animacao-teste.html">animação</a></li>
-        <li><a href="interaction/interacao-tecla.html">interacao-tecla</a></li>
+        <li><a href="interaction/canvas_teclado_1.html">interacao-teclado1</a></li>
+        <li><a href="interaction/canvas_teclado_2.html">interacao-teclado2</a></li>
+        <li><a href="interaction/canvas_teclado_3.html">Um herói que atira</a></li>
+
     </ul>
     <h3>Canvas element size: 600 x 300,
         Canvas drawing surface size: 300 x 150</h3>
