--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="interaction/canvas_teclado_1.html">interacao-teclado1</a></li>
         <li><a href="interaction/canvas_teclado_2.html">interacao-teclado2</a></li>
         <li><a href="interaction/canvas_teclado_3.html">Um herói que atira</a></li>
+        <li><a href="interaction/sonic.html">Sonic</a></li>
 
     </ul>
     <h3>Canvas element size: 600 x 300,
