--- a/interaction/animando-sonic.html
+++ b/interaction/animando-sonic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>\>Testando a classe Spritesheet</title>
     <link rel="stylesheet" href="../css/styles.css">
@@ -12,18 +12,18 @@
     <canvas id="canvas_spritesheet_1" width="500" height="500">
         <script>
             var context = document.getElementById('canvas_spritesheet_1').getContext('2d');
-
+            
             var imgSonic = new Image();
             imgSonic.src ='../images/spritesheet.png'
             // Quero passar: context, imagem, linhas, colunas
             var sheet = new Spritesheet(context, imgSonic, 3, 8);
             //duração de cada quadro
-            sheet.intervalo = 60;
+            sheet.intervalo = 240;
             //correndo para direita
             sheet.linha = 1;
             //Animaçção
             imgSonic.onload = gameLoop;
-
+            var x = 100;
             function gameLoop(){
                 context.clearRect(0,0,context.canvas.width, context.canvas.height);
 
@@ -31,9 +31,11 @@
                 sheet.proximoQuadro();
 
                 //onde desenhar
-                sheet.desenhar(100, 100);
+                sheet.desenhar(x, 100);
+                //x+=1;
                 requestAnimationFrame(gameLoop);
             }
+            
         </script>
     </canvas>
 </body>
