--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="interaction/canvas_teclado_3.html">Um herói que atira</a></li>
         <li><a href="interaction/sonic.html">Sonic</a></li>
         <li><a href="interaction/animando-sonic.html">Animando Sonic</a></li>
+        <li><a href="interaction/controlando-sonic.html">Controlando Sonic</a></li>
 
     </ul>
     <h3>Canvas element size: 600 x 300,
