--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="interaction/sonic.html">Sonic</a></li>
         <li><a href="interaction/animando-sonic.html">Animando Sonic</a></li>
         <li><a href="interaction/controlando-sonic.html">Controlando Sonic</a></li>
+        <li><a href="interaction/deteccao-colisoes.html">Detecção de colisões</a></li>
 
     </ul>
     <h3>Canvas element size: 600 x 300,
