Adding game images

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li><a href="drawing/sav-restore.html">Save and restore</a></li>
         <li><a href="drawing/animation.html">Animation</a></li>
         <li><a href="drawing/animation-with-time-control.html">Animation with time control</a></li>
+        <li><a href="drawing/image/scalling-image.html">Scalling images</a></li>
+        <li><a href="drawing/image/scalling-and-centering-image.html">Scalling and centering image</a></li>
         <li><a href="objects/cars.html">Cars</a></li>
         <li><a href="animacao/animacao-teste.html">animação</a></li>
         <li><a href="interaction/canvas_teclado_1.html">interacao-teclado1</a></li>
@@ -43,8 +45,7 @@
         <li><a href="interaction/deteccao-colisoes.html">Detecção de colisões</a></li>
 
     </ul>
-    <h3>Canvas element size: 600 x 300,
-        Canvas drawing surface size: 300 x 150</h3>
+    <h3>Canvas element size: 600 x 300, Canvas drawing surface size: 300 x 150</h3>
     <canvas id="canvas" width="600" height="300">
         Canvas not supported :(|)
         <script src="js/example.js"></script>
