Creating parallax effect

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <body>
     <h1>Desenhando um text no canvas</h1>
 
-    <ul>
+    <label for="drawing">Drawing</label>
+    <ul id="drawing">
         <li><a href="drawing/rectangle.html">rectangle</a></li>
         <li><a href="drawing/circle-arc.html">circles and arcs</a></li>
         <li><a href="drawing/star.html">Star</a></li>
@@ -34,6 +35,9 @@
         <li><a href="drawing/animation-with-time-control.html">Animation with time control</a></li>
         <li><a href="drawing/image/scalling-image.html">Scalling images</a></li>
         <li><a href="drawing/image/scalling-and-centering-image.html">Scalling and centering image</a></li>
+    </ul>
+    <label for="interaction">Interaction</label>
+    <ul id="interaction">
         <li><a href="objects/cars.html">Cars</a></li>
         <li><a href="animacao/animacao-teste.html">animação</a></li>
         <li><a href="interaction/canvas_teclado_1.html">interacao-teclado1</a></li>
@@ -44,6 +48,13 @@
         <li><a href="interaction/controlando-sonic.html">Controlando Sonic</a></li>
         <li><a href="interaction/deteccao-colisoes.html">Detecção de colisões</a></li>
 
+    </ul>
+    <label for="game">Game</label>
+    <ul id="game">
+        <li><a href="game/efeito-parallax.html">Parallax Effect</a></li>
+        <li><a href="game/nave-control.html">Nave Control</a></li>
+        <li><a href="game/nave-fire.html">Nave fire</a></li>
+        <li><a href="game/spaceship-on-space.html">Nave no espaço</a></li>
     </ul>
     <h3>Canvas element size: 600 x 300, Canvas drawing surface size: 300 x 150</h3>
     <canvas id="canvas" width="600" height="300">
