Putting all together

--- a/game/spaceship-on-space.html
+++ b/game/spaceship-on-space.html
@@ -10,12 +10,13 @@
     <script src="../js/teclado.js"></script>
     <script src="../js/nave.js"></script>
     <script src="../js/tiro.js"></script>
+    <script src="../js/fundo.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
-    <canvas id="canvas_nave" width="500" height="500"></canvas>
-    <script src="teste-nave.js"></script>
+    <canvas id="canvas_space" width="500" height="500"></canvas>
+    <script src="teste-nav    e-space.js"></script>
 </body>
 
 </html>
