--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <li><a href="game/nave-control.html">Nave Control</a></li>
         <li><a href="game/nave-fire.html">Nave fire</a></li>
         <li><a href="game/spaceship-on-space.html">Nave no espaço</a></li>
+        <li><a href="game/enemies.html">Nave com inimigos</a></li>
     </ul>
     <h3>Canvas element size: 600 x 300, Canvas drawing surface size: 300 x 150</h3>
     <canvas id="canvas" width="600" height="300">
