Creating colision with fire, enemies and spaceship

--- a/game/teste-colisao-inimigos.html
+++ b/game/teste-colisao-inimigos.html
@@ -17,7 +17,17 @@
 </head>
 
 <body>
+
+
     <canvas id="canvas_space" width="500" height="500"></canvas>
+    <div>
+        <input type="button" value="Iniciar" id="iniciar">
+        <input type="button" value="Desligar" id="desligar">
+    </div>
+    <div id="nave">
+        <p id="nave">Nave 1</p>
+        <p id="energia"></p>
+    </div>
     <script src="teste-colisao.js"></script>
 </body>
 
