--- a/game/spaceship-on-space.html
+++ b/game/spaceship-on-space.html
@@ -9,6 +9,7 @@
     <script src="../js/animacao.js"></script>
     <script src="../js/teclado.js"></script>
     <script src="../js/nave.js"></script>
+    <script src="../js/colisor.js"></script>
     <script src="../js/tiro.js"></script>
     <script src="../js/fundo.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
@@ -16,7 +17,7 @@
 
 <body>
     <canvas id="canvas_space" width="500" height="500"></canvas>
-    <script src="teste-nav    e-space.js"></script>
+    <script src="teste-nave-space.js"></script>
 </body>
 
 </html>
