--- a/drawing/circle-arc.html
+++ b/drawing/circle-arc.html
@@ -33,7 +33,7 @@
 
             context.beginPath();
             context.arc(w / 2, h / 2, 250, 0, 2 * Math.PI, true);
-            context.fill();
+            //context.fill();
             context.stroke();
 
             context.beginPath();
@@ -55,7 +55,7 @@
             context.arc(0, h, 100, radiano(90), radiano(270), true);
             context.fill();
             context.stroke();
-            function circle(x, y, raio,)
+            
         </script>
     </canvas>
 </body>
