--- a/interaction/canvas_teclado_3.html
+++ b/interaction/canvas_teclado_3.html
@@ -9,7 +9,7 @@
     <script src="../js/teclado.js"></script>
     <script src="../js/heroi.js"></script>
     <script src="../js/bola.js"></script>
-    <script src="../js/animacao.js"></script>
+    <script src="../js/animacao_v1.js"></script>
 </head>
 
 <body>
