--- a/drawing/sav-restore.html
+++ b/drawing/sav-restore.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utilizando save e restore</title>
 </head>
+<style>
+    canvas {
+        margin: 5px;
+
+        background: #ffffff;
+        border: thin inset #a88e8e;
+    }
+</style>
 
 <body>
-    <canvas id="canvas" width="1000" height="1000">
+    <canvas id="canvas" width="1000" height="500">
         <script>
             /**
              * o context possui o método save. Este método empilha configurações, fazendo uma cópia de todas as configurações atuais para o próximo nível
@@ -19,50 +27,32 @@
             var context = canvas.getContext('2d');
             var w = canvas.width;
             var h = canvas.height;
+            var x = canvas.width / 4;
+            var y = canvas.height / 2;
             context.fillStyle = 'green';
-            context.fillRect(50, 50, 25, 25);
+            context.fillRect(x - 12.5, y, 25, 25);
+
             context.save();
             context.fillStyle = 'purple';
-            context.fillRect(100, 50, 25, 25);
+            context.fillRect((2 * x) - 12.5, y, 25, 25);
 
             //voltamos para o nível anterior na pilha
             context.restore();
-            context.fillRect(150, 50, 25, 25);
+            context.fillRect((3 * x) - 12.5, y, 25, 25);
 
             //volta pra verde
             //agora um quadrado roxo;
 
-            // var image = new Image();
-            // image.src = 'images/cat-vibe.gif';
-            // image.onload = function () {
-            //     // drawImage
-            //     //começar na position 20
-            //     var x = 20;
-            //     //desenhar as imagens
-            //     for (let i = 0; i < 5; i++) {
-            //         context.drawImage(image, x, 20, 64, 32);
-            //         x += 70;
-            //     }
-            //     x = 20;
-            //     for (let i = 0; i < 5; i++) {
-            //         context.drawImage(image, x, 64, 64, 32);
-            //         x += 70;
-            //     }
+            var image = new Image();
+            image.src = '../images/cat-vibe.gif';
+            image.onload = function () {
+                //desenhar as imagens
+                for (let i = 1; i < 4; i++) {
+                    context.drawImage(image, (i * x) - 32, y + 100, 64, 32);
 
-            //     x = 20;
-            //     for (let i = 0; i < 5; i++) {
-            //         context.drawImage(image, x, 104, 128, 64);
-            //         x += 134;
-            //     }
-            // }
+                }
 
-            // var explosao = new Image();
-            // explosao.src = 'images/explosao.png';
-            // explosao.onload = function () {
-            //     context.drawImage(explosao,
-            //         80, 10, 60, 65, //Área de recorte da imagem(clipping)
-            //         20, 180, 60, 65)
-            // }
+            }
         </script>
     </canvas>
 </body>
