--- a/v1/jogo-definitivo.html
+++ b/v1/jogo-definitivo.html
@@ -14,6 +14,7 @@
     <script src="js/nave.js"></script>
     <script src="js/ovni.js"></script>
     <script src="js/tiro.js"></script>
+    <script src="js/spritesheet.js"></script>
 </head>
 
 <body>
