--- a/v1/jogo-definitivo.html
+++ b/v1/jogo-definitivo.html
@@ -15,6 +15,7 @@
     <script src="js/ovni.js"></script>
     <script src="js/tiro.js"></script>
     <script src="js/spritesheet.js"></script>
+    <script src="js/explosao.js"></script>
 </head>
 
 <body>
