Adding feature: start button

--- a/v1/jogo-definitivo.html
+++ b/v1/jogo-definitivo.html
@@ -16,6 +16,29 @@
     <script src="js/tiro.js"></script>
     <script src="js/spritesheet.js"></script>
     <script src="js/explosao.js"></script>
+    <style>
+        #link_jogar {
+            /* Inicia oculto */
+            display: none;
+            /* Cores e fundo */
+            color: yellow;
+            background: url(images/botao-jogar.png);
+            /* Fonte */
+            font-size: 20px;
+            font-family: sans-serif;
+            /* Sem sublinhado e com sombra */
+            text-decoration: none;
+            text-shadow: 2px 2px 5px black;
+            /* Posicionamento */
+            position: relative;
+            /* left: 440px; */
+            /* top: 500px; */
+            /* A imagem do botão é 72x72, descontamos os paddings */
+            /* width: 72px; */
+            /* height: 73px; */
+            /* padding: 23px 10px; */
+        }
+    </style>
 </head>
 
 <body>
@@ -39,8 +62,9 @@
     <div class="flex items-center justify-center">
         <div>
             <canvas id="canvas_animacao" width="500" height="500"></canvas>
+            <!-- <a class="" id="link_jogar" href="javascript: iniciarJogo()">Jogar</a> -->
         </div>
-
+        
     </div>
 
     <script src="jogo-nave.js"></script>
