--- a/v1/jogo-definitivo.html
+++ b/v1/jogo-definitivo.html
@@ -19,24 +19,16 @@
     <style>
         #link_jogar {
             /* Inicia oculto */
-            display: none;
+            /* display: none; */
             /* Cores e fundo */
-            color: yellow;
-            background: url(images/botao-jogar.png);
+            /* color: yellow; */
+            /* background: url(images/botao-jogar.png); */
             /* Fonte */
-            font-size: 20px;
-            font-family: sans-serif;
-            /* Sem sublinhado e com sombra */
-            text-decoration: none;
+
+
+
+
             text-shadow: 2px 2px 5px black;
-            /* Posicionamento */
-            position: relative;
-            /* left: 440px; */
-            /* top: 500px; */
-            /* A imagem do botão é 72x72, descontamos os paddings */
-            /* width: 72px; */
-            /* height: 73px; */
-            /* padding: 23px 10px; */
         }
     </style>
 </head>
@@ -44,29 +36,36 @@
 <body>
     <div class="fixed bg-indigo-400 h-full w-5"><span>&nbsp;</span></div>
     <div class="fixed bg-indigo-400 h-full w-5  right-0 top-0"><span>&nbsp;</span></div>
-    <div class="absolute bg-indigo-400 w-full h-5  bottom-0"><span>&nbsp;</span></div>
-    <div class="fixed bg-indigo-400 inset-0 w-full h-5"><span>&nbsp;</span></div>
+    <!-- <div class="absolute bg-indigo-400 w-full h-5  bottom-0"><span>&nbsp;</span></div> -->
+    <div class="absolute bg-indigo-400 inset-0 w-full h-5"><span>&nbsp;</span></div>
 
     <div class="inset-0 flex items-center justify-center ">
         <div class="bg-white max-w-md w-full p-6 text-center">
             <h1 id="score" class="text-4xl font-bold leading-none">0</h1>
             <p class="text-sm text-gray-700 mb-4">Points</p>
             <div>
-                <button id="iniciar"
+                <!-- <button id="iniciar"
                     class="bg-green-700 text-white w-full py-3 rounded-full text-lg mb-2">Iniciar</button>
 
-                <button id="desligar" class="bg-red-700 text-white  w-full p-3 rounded-full text-lg">Desligar</button>
+                <button id="desligar" class="bg-red-700 text-white  w-full p-3 rounded-full text-lg">Desligar</button> -->
             </div>
         </div>
     </div>
-    <div class="flex items-center justify-center">
-        <div>
+    <div class="md:container md:mx-auto p-4 border-2-1">
+        <div class="flex items-center justify-center">
             <canvas id="canvas_animacao" width="500" height="500"></canvas>
-            <!-- <a class="" id="link_jogar" href="javascript: iniciarJogo()">Jogar</a> -->
-        </div>
-        
-    </div>
 
+
+            <a class="absolute object-none object-center bg-blue-500 hover:bg-blue-400 text-white text-xl font-bold mt-56 py-7 px-4 border-b-4 border-blue-800 hover:border-blue-700 rounded-full focus:outline-none"
+                id="link_jogar" href="javascript: iniciarJogo()">Jogar</a>
+
+        </div>
+
+    </div>
+    <!-- <button id="link_jogar" href="javascript: iniciarJogo()"
+        class=" bg-blue-500 hover:bg-blue-400 text-white text-xl font-bold py-7 px-4 border-b-4 border-blue-800 hover:border-blue-700 rounded-full focus:outline-none ">
+        Jogar
+    </button> -->
     <script src="jogo-nave.js"></script>
 </body>
 
