Adding features and  fix ending game
Score
Game over screen

--- a/v1/jogo-definitivo.html
+++ b/v1/jogo-definitivo.html
@@ -16,6 +16,7 @@
     <script src="js/tiro.js"></script>
     <script src="js/spritesheet.js"></script>
     <script src="js/explosao.js"></script>
+    <script src="js/painel.js"></script>
     <style>
         #link_jogar {
             /* Inicia oculto */
