Fix eslint problems, moving files

--- a/v1/game-nave.html
+++ b/v1/game-nave.html
@@ -67,7 +67,7 @@
         class=" bg-blue-500 hover:bg-blue-400 text-white text-xl font-bold py-7 px-4 border-b-4 border-blue-800 hover:border-blue-700 rounded-full focus:outline-none ">
         Jogar
     </button> -->
-    <script src="jogo-nave.js"></script>
+    <script src="js/jogo-nave.js"></script>
 </body>
 
 </html>
